fix gradient on nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-  <app-navbar></app-navbar>
+  <app-navbar class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" ></app-navbar>
 
   <app-dashboard></app-dashboard>
 
