--- a/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
+++ b/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
@@ -31,10 +31,10 @@
 
           <div id="countdown" class="countdownHack">
             <ul>
-              <li><span id="days"></span>days</li>
-              <li><span id="hours"></span>Hours</li>
-              <li><span id="minutes"></span>Minutes</li>
-              <li><span id="seconds"></span>Seconds</li>
+              <li><span id="days">{{cdDays}}</span> Days</li>
+              <li><span id="hours">{{cdHours}}</span> Hours</li>
+              <li><span id="minutes">{{cdMins}}</span> Minutes</li>
+              <li><span id="seconds">{{cdSecs}}</span> Seconds</li>
             </ul>
           </div>
 
