--- a/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
+++ b/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
@@ -72,45 +72,23 @@
         <div class="chart-area">
 
           <div class="card-deck">
-            <div class="card">
+
+            <div class="card" *ngFor="let hack of upcomingHackathons">
               <img class="card-img-top" src="./assets/img/upcoming-pic1.png" alt="Card image cap">
               <div class="registrationsTool" title="So far Registered 10 people">
-                <i class="fa fa-user"></i> 10
+
               </div>
               <div class="card-body">
-                <h5 class="card-title text-center"><strong>Hack 2021.4.1</strong></h5>
+                <h5 class="card-title text-center"><strong>{{hack.name}}</strong></h5>
                 <p class="card-text small text-center noMar">Starts On</p>
-                <p class="card-text text-center"><i class="far fa-calendar-alt"></i> Apr 20, 19:00 PST </p>
+                <p class="card-text text-center"><i class="far fa-calendar-alt"></i> {{hack.startTime * 1000 | date:'MMMM d, y h:mm a'}}</p>
               </div>
               <div class="card-footer text-center">
                 <!--<small class="text-muted">Last updated 3 mins ago</small>-->
                 <button class="btn btn-primary registerBtn">Register</button>
               </div>
             </div>
-            <div class="card">
-              <img class="card-img-top" src="./assets/img/upcoming-pic2.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title text-center"><strong>Hack 2021.4.2</strong></h5>
-                <p class="card-text small text-center noMar">Starts On</p>
-                <p class="card-text text-center"><i class="far fa-calendar-alt"></i> Apr 30, 06:00 PST </p>
-              </div>
-              <div class="card-footer text-center">
-                <!--<small class="text-muted">Last updated 3 mins ago</small>-->
-                <button class="btn btn-primary registerBtn">Register</button>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="./assets/img/upcoming-pic3.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title text-center"><strong>Hack 2021.5</strong></h5>
-                <p class="card-text small text-center noMar">Starts On</p>
-                <p class="card-text text-center"><i class="far fa-calendar-alt"></i> May 25, 09:00 PST </p>
-              </div>
-              <div class="card-footer text-center">
-                <!--<small class="text-muted">Last updated 3 mins ago</small>-->
-                <button class="btn btn-primary registerBtn">Register</button>
-              </div>
-            </div>
+
           </div>
 
         </div>
