--- a/src/app/components/hackathon-deets/hackathon-deets.component.html
+++ b/src/app/components/hackathon-deets/hackathon-deets.component.html
@@ -7,7 +7,7 @@
     <!-- Project Card Example -->
     <div class="card shadow">
       <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Upcoming Hackathon Idea Details</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Current Hackathon Idea Details</h6>
       </div>
 
       <div class="card-body">
