--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav sidebar accordion" id="accordionSidebar">
 
   <!-- Sidebar - Brand -->
-  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+  <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLink]="['/dashboard']">
     <div class="sidebar-brand-icon rotate-n-15">
       <i class="fas fa-code"></i>
     </div>
