--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
 
   <!-- Nav Item - Pages Collapse Menu -->
   <li class="nav-item">
-    <a class="nav-link collapsed" href="#">
+    <a class="nav-link collapsed" [routerLink]="['/hackathons', 'ongoing']">
       <i class="far fa-clock fa-fw"></i>
       <span>Current</span>
     </a>
@@ -44,7 +44,7 @@
 
   <!-- Nav Item - Utilities Collapse Menu -->
   <li class="nav-item">
-    <a class="nav-link collapsed" href="#">
+    <a class="nav-link collapsed" [routerLink]="['/hackathons', 'upcoming']">
       <i class="far fa-calendar-alt fa-fw"></i>
       <span>Upcoming</span>
     </a>
@@ -60,7 +60,7 @@
     </div>-->
   </li>
   <li class="nav-item">
-    <a class="nav-link collapsed" href="#">
+    <a class="nav-link collapsed" [routerLink]="['/hackathons', 'previous']">
       <i class="fas fa-hourglass-end fa-fw"></i>
       <span>Previous</span>
     </a>
