--- a/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
+++ b/src/app/components/upcoming-hackathons/upcoming-hackathons.component.html
@@ -65,7 +65,7 @@
 
           <div class="card-deck">
 
-            <div class="card" *ngFor="let hack of upcomingHackathons; let index = index">
+            <div class="card" *ngFor="let hack of upcomingHackathons | slice:0:3; let index = index">
 
               <img class="card-img-top" src="./assets/img/upcoming-pic1.png" alt="Card image cap">
               <div class="registrationsTool" title="So far Registered 10 people">
